# asyncio-melcloud-lib

./: .gitignore  README.md  pyproject.toml  req.txt
.github/workflows/: python-publish.yml
docs/: mkdocs.yml
docs/docs/: index.md
lib/melcloud/: devices.py  helpers.py  jsongenerator.py  melcloudclient.py
